--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    <groupId>com.oracle.database.jdbc</groupId>
+    <artifactId>ojdbc11</artifactId>
+</dependency>	
+
 	</dependencies>
 
 	<build>
