--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Application
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=system
-spring.datasource.password=your_password
+spring.datasource.password=Shriyansh@17
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.session.jdbc.initialize-schema=always
