--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Application
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=system
-spring.datasource.password=Shriyansh@17
+spring.datasource.password=Ayushi2003@
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.session.jdbc.initialize-schema=always
  
 #spring.security.user.name=admin
