--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Application
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl2
 spring.datasource.username=system
-spring.datasource.password=@Kanksha5426
+spring.datasource.password=Itsmehii@12
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.session.jdbc.initialize-schema=always
